# upnp-engage

./: .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: build.yml  release.yml
attic/: notify-example.rs  signals.rs
src/: config.rs  deferred_task.rs  main.rs  other.rs
src/attic/: deferred_task.rs
src/platform/: mod.rs  windows.rs
