[package]
name = "upnp-engage"
version = "0.1.0"
edition = "2021"

[dependencies]
igd = {version = "*", features = ["aio"]}
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
ctrlc = "*"
tokio = { version = "1", features = ["full"] }
signal-hook = {version = "*", features = ["iterator"]}
windows-service = "*"

[build]
target = "x86_64-unknown-linux-gnu"