[package]
name = "upnp-engage"
version = "0.1.0"
edition = "2021"

[dependencies]
igd = { version = "*", features = ["aio"] }
serde = { version = "1", features = ["derive"] }
toml = "0.5"
tokio = { version = "1", features = ["full"] }
winapi = { version = "*", features = ["minwindef", "consoleapi"] }
once_cell = "*"
local-ip-address = "*"

[profile.release]
opt-level = "z"
debug = false
split-debuginfo = '...'  # Platform-specific.
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
